# qt5-learn

./: README.md
01_hello_world/hello_world/: CMakeLists.txt  hello_world_en_US.ts  main.cpp
02_gui_hw/02_gui_hw/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h
03_layouts/layouts/: CMakeLists.txt  dialog.ui
04_animations/animations/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
05_state_machine_timers/traffic_light/: mainwindow.cpp  mainwindow.h  mainwindow.ui  traffic_light.pro  traffic_light_res.qrc
06_painter/painter/: mainwindow.cpp  mainwindow.h
